--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ header {
 }
 
 .main-nav__website-title.active span {
-    transform: translateY(-100%);
+    transform: translateY(-105%);
 }
 
 .main-nav ul li {
@@ -171,7 +171,7 @@ header {
 }
 
 .hero__container {
-    width: 800px;
+    max-width: 800px;
     color: white;
     display: flex;
     flex-direction: column;
