--- a/style.css
+++ b/style.css
@@ -171,7 +171,8 @@ header {
 }
 
 .hero__container {
-    max-width: 800px;
+    max-width: 100%;
+    width: 800%;
     color: white;
     display: flex;
     flex-direction: column;
