--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ img:not(.icon) {
     height: 100%;
     width: 100%;
     object-fit: cover;
-    object-position: top;
+    object-position: center;
 }
 
 .title {
@@ -180,7 +180,7 @@ header {
     margin: auto;
     text-align: center;
     height: 70%;
-    padding: 20px;
+    padding: 1rem;
 }
 
 .hero__container .hero__container_title {
