--- a/style.css
+++ b/style.css
@@ -472,7 +472,7 @@ header {
 .projects__project {
     width: 48%;
     aspect-ratio: 3/2;
-    margin-bottom: 2.5rem;
+    margin-bottom: 1rem;
     position: relative;
     overflow: hidden;
     border: 1px solid rgb(255, 255, 255);
@@ -680,6 +680,12 @@ footer h4 {
     .projects__project {
         width: 100%;
         margin-bottom: 2.5rem;
+    }
+    .projects__project-title {
+        font-size: 1.5rem;
+    }
+    .projects__project-description {
+        font-size: 1rem;
     }
     .footer__container {
         flex-direction: column;
